<resources>
    <string name="app_name">Group12_HW5</string>
    <string name="search_edit" />
    <string name="search">Search</string>
    <string name="go">Go</string>
    <string name="over">Overview:</string>
    <string name="finish">Finish</string>
    <string name="similar">Similar Games</string>
    <string name="play">Play Trailer</string>
    <string name="genre">Genre: </string>
    <string name="publisher">Publisher: </string>
    <string name="finish_s">Finish</string>
</resources>
