<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chala.group12_hw5.GameDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/title_db" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="125dp"
        app:srcCompat="@android:drawable/screen_background_light"
        android:id="@+id/imageView"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/title_db"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/over"
        android:layout_below="@+id/imageView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/over"
        android:id="@+id/svdb">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/lldb" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/overText" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:text="@string/play"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/play"
        android:layout_above="@+id/similar"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/similar"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/similar"
        android:layout_above="@+id/finish"
        android:layout_alignLeft="@+id/play"
        android:layout_alignStart="@+id/play" />

    <TextView
        android:text="@string/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/svdb"
        android:layout_alignRight="@+id/over"
        android:layout_alignEnd="@+id/over"
        android:id="@+id/genre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/genre"
        android:layout_alignLeft="@+id/play"
        android:layout_alignStart="@+id/play"
        android:id="@+id/genreText" />

    <TextView
        android:text="@string/publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/genre"
        android:id="@+id/pub"
        android:layout_alignBottom="@+id/pubText"
        android:layout_toLeftOf="@+id/genreText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genreText"
        android:layout_alignLeft="@+id/genreText"
        android:layout_alignStart="@+id/genreText"
        android:id="@+id/pubText" />

    <Button
        android:text="@string/finish"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/finish"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/similar"
        android:layout_alignStart="@+id/similar" />

    <WebView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/webView"
        android:visibility="invisible"/>

</RelativeLayout>
